--- a/Spotify Clone/style.css
+++ b/Spotify Clone/style.css
@@ -1,7 +1,27 @@
-*
-{
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Open+Sans:wght@300&family=Poppins&family=Varela+Round&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Open+Sans:wght@300&family=Varela+Round&display=swap');
+ *
+ {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
+ }
+body
+{
+    background-color:antiquewhite;
+}
+nav{
+    font-family: 'Poppins',sans-serif;
+}
+nav ul
+{
+    display: flex;
+    list-style-type: none;
+    height: 60px;
+    background-color: black;
+    color: white;
+}
+nav img
+{
+    height: 60px;
+    width: 80px;
 }
